syntax = "proto3";

package bryanchain.bryanchain;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "bryanchain/bryanchain/params.proto";
import "bryanchain/bryanchain/resource.proto";

option go_package = "bryanchain/x/bryanchain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/bryanchain/bryanchain/params";
  
  }
  
  // Queries a list of Resource items.
  rpc Resource    (QueryGetResourceRequest) returns (QueryGetResourceResponse) {
    option (google.api.http).get = "/bryanchain/bryanchain/resource/{id}";
  
  }
  rpc ResourceAll (QueryAllResourceRequest) returns (QueryAllResourceResponse) {
    option (google.api.http).get = "/bryanchain/bryanchain/resource";
  
  }

  // CreateResource creates a new resource.
  rpc CreateResource (QueryCreateResourceRequest) returns (QueryCreateResourceResponse) {
    option (google.api.http).post = "/bryanchain/bryanchain/resource"; // Adjust the HTTP method and path as needed.
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetResourceRequest {
  uint64 id = 1;
}

message QueryGetResourceResponse {
  Resource Resource = 1 [(gogoproto.nullable) = false];
}

message QueryAllResourceRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllResourceResponse {
  repeated Resource                               Resource   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryCreateResourceRequest {
  string creator = 1;
  string title = 2;
  string body = 3;
}

message QueryCreateResourceResponse {
  uint64 id = 1;
}